# doc2markdown

./: .gitignore  README.md  config.example.yaml  probe_vision.py  pyproject.toml
doc2md/: __init__.py  cli.py  config.py  converter.py  llm.py  transcribe.py
doc2md/prompts/: document.txt  ppt.txt
tests/: make_hidden_deck.py  test_clean_markdown.py  test_hidden_slides.py
