[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2md"
version = "0.1.0"
description = "Convert PowerPoint, Word and PDF documents to Markdown using a vision LLM (headless CLI)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    "rich>=13.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
doc2md = "doc2md.cli:app"

[tool.setuptools.packages.find]
include = ["doc2md*"]

[tool.setuptools.package-data]
doc2md = ["prompts/*.txt"]
